# codility_train

./: CMakeLists.txt  FindHeavyInt.cpp  FrogRiverOne.cpp  MaxDistanceAdjacent.cpp  TapeEquilibrium.cpp
